bk_ida/gccida/c3/emit_prefetch_instructions
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_prefetch_instructions/src/loop.c:4225:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v1; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_prefetch_instructions/src/loop.c:4229:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v5; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_prefetch_instructions/src/loop.c:4231:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v7; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_prefetch_instructions/src/loop.c:4234:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v10; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_prefetch_instructions/src/loop.c:4242:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+20h] [rbp-1770h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_prefetch_instructions/src/loop.c:4267:1: error: use of undeclared identifier 'induction_1'
induction_1 *biv1; // [rsp+148h] [rbp-1648h] 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_prefetch_instructions/src/loop.c:4267:14: error: use of undeclared identifier 'biv1'; did you mean 'div'?
induction_1 *biv1; // [rsp+148h] [rbp-1648h] 
             ^~~~
             div
/usr/include/stdlib.h:849:14: note: 'div' declared here
extern div_t div (int __numer, int __denom)
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_prefetch_instructions/src/loop.c:4268:1: error: use of undeclared identifier 'induction_1'
induction_1 *biv; // [rsp+150h] [rbp-1640h] 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_prefetch_instructions/src/loop.c:4268:14: error: use of undeclared identifier 'biv'; did you mean 'div'?
induction_1 *biv; // [rsp+150h] [rbp-1640h] 
             ^~~
             div
/usr/include/stdlib.h:849:14: note: 'div' declared here
extern div_t div (int __numer, int __denom)
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_prefetch_instructions/src/loop.c:4271:1: error: use of undeclared identifier 'induction_1'
induction_1 *iv; // [rsp+1748h] [rbp-48h] 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_prefetch_instructions/src/loop.c:4271:14: error: use of undeclared identifier 'iv'
induction_1 *iv; // [rsp+1748h] [rbp-48h] 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_prefetch_instructions/src/loop.c:4301:1: error: use of undeclared identifier 'biv'
biv = bl_0->biv; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_prefetch_instructions/src/loop.c:4303:7: error: use of undeclared identifier 'biv1'; did you mean 'ivs'?
for ( biv1 = biv; biv1; biv1 = biv1->next_iv ) 
      ^~~~
      ivs
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_prefetch_instructions/src/loop.c:4269:19: note: 'ivs' declared here
 struct loop_ivs *ivs; // [rsp+158h] [rbp-1638h] 
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_prefetch_instructions/src/loop.c:4303:14: error: use of undeclared identifier 'biv'; did you mean 'div'?
for ( biv1 = biv; biv1; biv1 = biv1->next_iv ) 
             ^~~
             div
/usr/include/stdlib.h:849:14: note: 'div' declared here
extern div_t div (int __numer, int __denom)
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_prefetch_instructions/src/loop.c:4303:19: error: use of undeclared identifier 'biv1'
for ( biv1 = biv; biv1; biv1 = biv1->next_iv ) 
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_prefetch_instructions/src/loop.c:4303:25: error: use of undeclared identifier 'biv1'; did you mean 'ivs'?
for ( biv1 = biv; biv1; biv1 = biv1->next_iv ) 
                        ^~~~
                        ivs
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_prefetch_instructions/src/loop.c:4269:19: note: 'ivs' declared here
 struct loop_ivs *ivs; // [rsp+158h] [rbp-1638h] 
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_prefetch_instructions/src/loop.c:4303:32: error: use of undeclared identifier 'biv1'
for ( biv1 = biv; biv1; biv1 = biv1->next_iv ) 
                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_prefetch_instructions/src/loop.c:4305:37: error: use of undeclared identifier 'biv'
if ( ( unsigned __int16)*( _DWORD *)biv->add_val != 54 ) 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_prefetch_instructions/src/loop.c:4312:1: error: use of undeclared identifier 'biv'
biv->src_reg->fld[0].rtuint, 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_prefetch_instructions/src/obj/loop.o] Error 1
